src/test/resources/public/input/typechecking/fail/main_structure/fail06.jova
class Test {
   Test(Main a) {

   }
}
